# devex-slackbot

./: .env.example  .gitignore  Dockerfile  IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_REVIEW.md  MARKDOWN_SOURCE.md  PHASE_8_INTEGRATION.md  README.md  faq.md  pyproject.toml
docs/: AZURE_CHECKLIST.md  AZURE_DEPLOYMENT.md
k8s/: README.md  configmap.yaml  deployment.yaml  namespace.yaml  secret.yaml.template
scripts/: deploy.sh  notion_oauth_setup.py  print_channel_id.py  run_local.sh  sync_faq_once.py  test_claude.py  test_markdown_source.py  test_phase1_phase2.py  test_phase4.py  test_phase5.py  test_phase6.py  test_phase7.py  test_retrieval.py
src/faqbot/: __init__.py  config.py  logging.py  main.py  types.py
src/faqbot/llm/: __init__.py  claude.py  prompts.py
src/faqbot/markdown/: __init__.py  chunking.py  reader.py
src/faqbot/mcp/: __init__.py  token_manager.py
src/faqbot/notion/: __init__.py  chunking.py  client.py  parser.py
src/faqbot/pipeline/: __init__.py  answer.py
src/faqbot/retrieval/: __init__.py  bm25_index.py  embeddings.py  hybrid.py  ranker.py  reranker.py  store.py
src/faqbot/search/: __init__.py  suggestions.py
src/faqbot/slack/: __init__.py  app.py  filters.py  formatting.py  handlers.py  reactions.py  receipt_commands.py  report_commands.py  slash_commands.py
src/faqbot/state/: __init__.py  dedupe.py  interaction_log.py  metrics.py  receipt_tracker.py
tests/: test_answer_pipeline.py  test_chunking.py  test_filters.py  test_ranker.py  test_reactions.py  test_status_cache.py  test_suggestions.py
(+5 files in other folders)
